Makre reset config less garbage